--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Imagem Inicial -->
         <tr>
             <td colspan="2" style="overflow:hidden">
-                <img src="img_inicial.png" alt="Imagem de fundo" class="imagem-largura-total" style="overflow:hidden">
+                <img src="header.png" alt="Imagem de fundo" class="imagem-largura-total" style="overflow:hidden">
             </td>
         </tr>
 
