--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portfolio.css">
-    <title>Estúdio Oikos: Design de Interiores Sustentável</title>
+    <title>Estúdio Oikos: Portfólio</title>
 </head>
 <body style="background-color:#FFFCE2; margin: 0; padding: 0; overflow-x: hidden;">
 
@@ -28,7 +28,7 @@
 <!-- Título da Galeria -->
         <tr>
             <td colspan="2" class="texto-lado-esquerdo" style="padding-left:8.5%;">
-                <h2 style="font-size:44px; color:#0E5935; margin-top: 155px">Galeria de projetos em destaque</h2>
+                <h2 style="font-size:44px; color:#0E5935; margin-left: -60px; margin-top: 155px">Confira nossos projetos mais recentes </h2>
             </td>
         </tr>
 
@@ -37,60 +37,86 @@
             <td>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="patio.jpeg" alt="Pátio ecológico">
-                        <p>Pátio ecológico, 2024</p>
+					    <a href="portfolio2.html">
+                        <img src="cozinha.png" alt="Cozinha moderna" class="galeria-img" style="cursor: pointer;" >
+						</a>
+                        <p>Cozinha moderna, 2024</p>
                     </div>
 				</div>
 			</td>
 			<td>
 			    <div class="gallery">
 				    <div class="gallery-item">
-                        <img src="casaint.jpeg" alt="Casa no interior">
+                        <img src="casainterior.png" alt="Casa no interior" class="galeria-img">
                         <p>Casa no interior, 2024</p>
                     </div>
 				</div>
 		    </td>
+			<td>
+				<div class="gallery">
+					<div class="gallery-item">
+                        <img src="cafeteria.png" alt="Cafeteria sustentável" class="galeria-img">
+                        <p>Cafeteria Zen, 2024</p>
+                    </div>
+				</div>
+			</td>
 	    </tr>
 					
 		<tr>
 			<td>
-				<div class="gallery">
-					<div class="gallery-item">
-                        <img src="lojaroupas.jpeg" alt="Loja de roupas">
-                        <p>Loja de roupas, 2023</p>
+                <div class="gallery">
+				    <div class="gallery-item">
+                        <img src="escritorio.png" alt="Escritorio comercial" class="galeria-img">
+                        <p>Escritório comercial, 2024</p>
                     </div>
 				</div>
 			</td>
 			<td>
 			    <div class="gallery">
                     <div class="gallery-item">
-					    <img src="projeto.png" alt="Quadrado branco com a frase: Seu projeto aqui!">
+					    <img src="projeto.png" alt="Quadrado branco com a frase: Seu projeto aqui!" class="galeria-img">
 						<a href="contato.html">
                         <button>Entre em contato conosco</button>
 						</a>
                     </div>
 				</div>
 			</td>
+			<td>
+			    <div class="gallery">
+                    <div class="gallery-item">
+                        <img src="banheiro.png" alt="Banheiro ecológico" class="galeria-img">
+                        <p>Banheiro ecológico, 2023</p>
+                    </div>
+                </div>
+            </td>
 	    </tr>
 		
 		<tr>
 			<td>
                 <div class="gallery">
 				    <div class="gallery-item">
-                        <img src="banheiro.jpeg" alt="Banheiro eco-friendly">
-                        <p>Banheiro eco-friendly, 2023</p>
+                        <img src="jardim.png" alt="Jardim minimalista" class="galeria-img">
+                        <p>Jardim minimalista, 2023</p>
                     </div>
 				</div>
 			</td>
 			<td>
 			    <div class="gallery">
                     <div class="gallery-item">
-                        <img src="cozinha.jpeg" alt="Cozinha moderna">
-                        <p>Cozinha moderna, 2023</p>
+					    <img src="lojaroupas.png" alt="Loja de roupas" class="galeria-img">
+						<p>Loja de roupas, 2023</p>
+                    </div>
+				</div>
+			</td>
+			<td>
+			    <div class="gallery">
+                    <div class="gallery-item">
+                        <img src="quintal.jpg" alt="Escritório no quintal" class="galeria-img">
+                        <p>Escritório no quintal, 2022</p>
                     </div>
                 </div>
             </td>
-        </tr>
+	    </tr>
     </table>
 	
 <footer>
