--- a/serviços.html
+++ b/serviços.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="serviços.css">
-    <title>Estúdio Oikos: Design de Interiores Sustentável</title>
+    <title>Estúdio Oikos: Serviços</title>
 </head>
 <body style="background-color:#FFFCE2; margin: 0; padding: 0; overflow-x: hidden;">
 
@@ -36,8 +36,7 @@
                 <div class="servicos-container">
                     <div class="servico-item">
                         <img src="casa.png" alt="Ícone de Projetos Residenciais" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; 
-						600; margin-top: 5px; margin-bottom: 10px">Projetos residenciais</h3>
+                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Projetos residenciais</h3>
                         <p style="font-size: 22px;"> Planejamento personalizado de espaços residenciais, focado em criar ambientes confortáveis, funcionais e sustentáveis.</p>
 						<p style="font-size: 22px;"> Cada projeto visa atender às necessidades dos moradores, utilizando materiais e técnicas que reduzem o impacto ambiental.</p>
                     </div>
@@ -59,7 +58,7 @@
             <td class="texto-lado-esquerdo" style="padding-left:8.5%;" >
                 <div class="servicos-container">
                     <div class="servico-item" style="padding-bottom: 47px;padding-top:47px">
-                        <img src="modelagem-3d.png" alt="Ícone Visualização 3D" class="icone">
+                        <img src="modelagem-3d.png"; alt="Ícone Visualização 3D" class="icone icone-ajuste">
                         <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Visualização 3D</h3>
                         <p style="font-size: 22px;"> Criação de modelos tridimensionais para ajudar na visualização dos projetos antes da execução. </p>
                         <p style="font-size: 22px;"> Essa tecnologia permite simular texturas, iluminação e disposição de móveis, facilitando o planejamento e a tomada de decisões de forma prática e realista.</p>
@@ -69,7 +68,7 @@
                     <div class="servicos-container">
                         <div class="servico-item">
                          <img src="moveis.png" alt="" class="icone">
-                            <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Design de móveis e decoração eco-friendly</h3>
+                            <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Design de móveis</h3>
                             <p style="font-size: 22px;"> Desenvolvimento de móveis e peças decorativas sustentáveis, utilizando materiais de baixo impacto ambiental e priorizando o design atemporal e funcional. </p>
                             <p style="font-size: 22px;"> Ideal para quem busca decoração que alie beleza e responsabilidade ambiental.</p>
                         </div>
@@ -82,10 +81,10 @@
             <td class="texto-lado-esquerdo" style="padding-left:8.5%;">
                 <div class="servicos-container">
                     <div class="servico-item" style="padding-bottom: 80px;padding-top:80px">
-                     <img src="paisagem.png" alt="" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Paisagismo sustentável</h3>
+                     <img src="paisagem.png" alt="" class="icone icone-ajustar">
+                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Paisagismo</h3>
                         <p style="font-size: 22px;"> Planejamento de áreas verdes integradas ao ambiente, com espécies nativas e técnicas de baixo consumo de água. </p>
-                        <p style="font-size: 22px;"> O paisagismo sustentável melhora a qualidade de vida e contribui para a biodiversidade local, transformando o espaço em um verdadeiro refúgio natural.</p>
+                        <p style="font-size: 22px;"> O paisagismo sustentável melhora a qualidade de vida e contribui para a biodiversidade local, transformando o espaço em um refúgio natural.</p>
                     </div>
                 </div>
             </td>
@@ -93,9 +92,9 @@
                 <div class="servicos-container">
                     <div class="servico-item">
                      <img src="casa-sustentavel.png" alt="" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Consultoria de Sustentabilidade para Interiores </h3>
-                        <p style="font-size: 22px;"> Avaliação de ambientes e orientações para tornar o espaço mais sustentável, com sugestões sobre materiais eco-friendly, eficiência energética, reaproveitamento de recursos e muito mais.  </p>
-                        <p style="font-size: 22px;"> Transformação do ambiente com escolhas conscientes, sem necessidade de grandes reformas.</p>
+                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Consultoria</h3>
+                        <p style="font-size: 22px;"> Avaliação de ambientes e orientações para tornar o espaço mais sustentável, com sugestões sobre eficiência energética, reaproveitamento de recursos e muito mais.  </p>
+                        <p style="font-size: 22px;"> Transformação consciente do ambiente, sem necessidade de grandes reformas.</p>
                     </div> 
                 </div>
             </td>
